# NovaEscrow

./: .env.example  .gitignore  .replit  LICENSE  README.md  main.py  pyproject.toml
src/cogs/: __init__.py  balance.py  escrow.py
src/database/: manager.py
src/services/: wallet.py
src/ui/: views.py
src/utils/: logging.py
